kustomize/base/Service.yaml
kind: Service
apiVersion: v1
metadata:
  name: myapplication
  labels:
    name: myapplication
    version: "1.0"
    component: worker
    part-of: myapplication
    managed-by: kustomize
    owner: 7miguel7
    project: myapplication
    created-by: 7miguel7
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: myapplication
    component: worker
  type: ClusterIP
  sessionAffinity: None
