kustomize/base/Route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: myapplication
  labels:
    name: myapplication
    version: "1.0"
    component: worker
    part-of: myapplication
    managed-by: kustomize
    owner: 7miguel7
    project: myapplication
    created-by: 7miguel7
spec:
  to:
    kind: Service
    name: myapplication
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
